添加 center.admin 模块和基础功能
