# app/center/admin/internal/server/grpc.go
@@ -1,0 +1,31 @@
+package server
+
+import (
+	v1 "github.com/csyangpeng/go-kratos-admin/api/center/admin/v1"
+	"github.com/csyangpeng/go-kratos-admin/app/center/admin/internal/conf"
+	"github.com/csyangpeng/go-kratos-admin/app/center/admin/internal/service"
+	"github.com/go-kratos/kratos/v2/log"
+	"github.com/go-kratos/kratos/v2/middleware/recovery"
+	"github.com/go-kratos/kratos/v2/transport/grpc"
+)
+
+// NewGRPCServer new a gRPC server.
+func NewGRPCServer(c *conf.Server, greeter *service.CenterAdmin, logger log.Logger) *grpc.Server {
+	var opts = []grpc.ServerOption{
+		grpc.Middleware(
+			recovery.Recovery(),
+		),
+	}
+	if c.Grpc.Network != "" {
+		opts = append(opts, grpc.Network(c.Grpc.Network))
+	}
+	if c.Grpc.Addr != "" {
+		opts = append(opts, grpc.Address(c.Grpc.Addr))
+	}
+	if c.Grpc.Timeout != nil {
+		opts = append(opts, grpc.Timeout(c.Grpc.Timeout.AsDuration()))
+	}
+	srv := grpc.NewServer(opts...)
+	v1.RegisterCenterAdminServer(srv, greeter)
+	return srv
+}
